syntax = "proto3";
import "Protos/common.proto";

option csharp_namespace = "LovgaBroker";

package broker.client;

service ConsumerClient{
  rpc NotifyConsumer (NotifyRequest) returns (broker.common.Reply);
}

message NotifyRequest{
  string test = 1;
}